grammar/gen/TypeSchemeParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TypeSchemeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACE=3, RBRACE=4, LBRACK=5, RBRACK=6, LANGL=7, RANGL=8, 
		COLON=9, COMMA=10, AMP=11, BAR=12, SPREAD=13, DOT=14, QUOTE=15, WS=16, 
		KEYOF=17, INFER=18, IN=19, AS=20, EXTENDS=21, EXTENDS_Q=22, IN_Q=23, IF=24, 
		NEVER=25, NULL=26, UNDEFINED=27, UNKNOWN=28, OBJECT=29, ANY=30, STRING=31, 
		NUMBER=32, BOOLEAN=33, BooleanLiteral=34, StringLiteral=35, SingleQuotedStringLiteral=36, 
		DoubleQuotedStringLiteral=37, BacktickStringLiteral=38, EscapeSequence=39, 
		UnicodeEscapeSequence=40, NumberLiteral=41, HexLiteral=42, OctalLiteral=43, 
		BinaryLiteral=44, DecimalLiteral=45, Identifier=46;
	public static final int
		RULE_compilationUnit = 0, RULE_sexpr = 1, RULE_atom = 2, RULE_list = 3, 
		RULE_primitive = 4, RULE_literal = 5, RULE_tupleLiteral = 6, RULE_objectLiteral = 7, 
		RULE_objectProp = 8, RULE_identifier = 9, RULE_reservedKeyword = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "sexpr", "atom", "list", "primitive", "literal", "tupleLiteral", 
			"objectLiteral", "objectProp", "identifier", "reservedKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", "':'", 
			"','", "'&'", "'|'", "'...'", "'.'", "'''", null, "'keyof'", "'infer'", 
			"'in'", "'as'", "'extends'", "'extends?'", "'in?'", "'if'", "'never'", 
			"'null'", "'undefined'", "'unknown'", "'object'", "'any'", "'string'", 
			"'number'", "'boolean'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LANGL", 
			"RANGL", "COLON", "COMMA", "AMP", "BAR", "SPREAD", "DOT", "QUOTE", "WS", 
			"KEYOF", "INFER", "IN", "AS", "EXTENDS", "EXTENDS_Q", "IN_Q", "IF", "NEVER", 
			"NULL", "UNDEFINED", "UNKNOWN", "OBJECT", "ANY", "STRING", "NUMBER", 
			"BOOLEAN", "BooleanLiteral", "StringLiteral", "SingleQuotedStringLiteral", 
			"DoubleQuotedStringLiteral", "BacktickStringLiteral", "EscapeSequence", 
			"UnicodeEscapeSequence", "NumberLiteral", "HexLiteral", "OctalLiteral", 
			"BinaryLiteral", "DecimalLiteral", "Identifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TypeSchemeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TypeSchemeParser.EOF, 0); }
		public List<TerminalNode> WS() { return getTokens(TypeSchemeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TypeSchemeParser.WS, i);
		}
		public List<SexprContext> sexpr() {
			return getRuleContexts(SexprContext.class);
		}
		public SexprContext sexpr(int i) {
			return getRuleContext(SexprContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(22);
				match(WS);
				}
			}

			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 72636486819882L) != 0) {
				{
				{
				setState(25);
				sexpr(0);
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(26);
					match(WS);
					}
				}

				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SexprContext extends ParserRuleContext {
		public SexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sexpr; }
	 
		public SexprContext() { }
		public void copyFrom(SexprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_AmpContext extends SexprContext {
		public List<SexprContext> sexpr() {
			return getRuleContexts(SexprContext.class);
		}
		public SexprContext sexpr(int i) {
			return getRuleContext(SexprContext.class,i);
		}
		public TerminalNode AMP() { return getToken(TypeSchemeParser.AMP, 0); }
		public List<TerminalNode> WS() { return getTokens(TypeSchemeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TypeSchemeParser.WS, i);
		}
		public T_AmpContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Amp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Amp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Amp(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_QuotedContext extends SexprContext {
		public TerminalNode QUOTE() { return getToken(TypeSchemeParser.QUOTE, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public T_QuotedContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Quoted(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Quoted(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Quoted(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_BarContext extends SexprContext {
		public List<SexprContext> sexpr() {
			return getRuleContexts(SexprContext.class);
		}
		public SexprContext sexpr(int i) {
			return getRuleContext(SexprContext.class,i);
		}
		public TerminalNode BAR() { return getToken(TypeSchemeParser.BAR, 0); }
		public List<TerminalNode> WS() { return getTokens(TypeSchemeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TypeSchemeParser.WS, i);
		}
		public T_BarContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Bar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Bar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Bar(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_IndexedContext extends SexprContext {
		public SexprContext arg;
		public List<SexprContext> sexpr() {
			return getRuleContexts(SexprContext.class);
		}
		public SexprContext sexpr(int i) {
			return getRuleContext(SexprContext.class,i);
		}
		public TerminalNode LBRACK() { return getToken(TypeSchemeParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(TypeSchemeParser.RBRACK, 0); }
		public T_IndexedContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Indexed(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Indexed(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Indexed(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_CallContext extends SexprContext {
		public SexprContext sexpr;
		public List<SexprContext> args = new ArrayList<SexprContext>();
		public List<SexprContext> sexpr() {
			return getRuleContexts(SexprContext.class);
		}
		public SexprContext sexpr(int i) {
			return getRuleContext(SexprContext.class,i);
		}
		public TerminalNode LANGL() { return getToken(TypeSchemeParser.LANGL, 0); }
		public TerminalNode RANGL() { return getToken(TypeSchemeParser.RANGL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TypeSchemeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TypeSchemeParser.COMMA, i);
		}
		public T_CallContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Call(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_GroupedContext extends SexprContext {
		public TerminalNode LPAREN() { return getToken(TypeSchemeParser.LPAREN, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TypeSchemeParser.RPAREN, 0); }
		public List<TerminalNode> WS() { return getTokens(TypeSchemeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TypeSchemeParser.WS, i);
		}
		public T_GroupedContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Grouped(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Grouped(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Grouped(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_SpreadContext extends SexprContext {
		public TerminalNode SPREAD() { return getToken(TypeSchemeParser.SPREAD, 0); }
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public T_SpreadContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Spread(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Spread(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Spread(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_ListContext extends SexprContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public T_ListContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_List(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_List(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_List(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_AtomContext extends SexprContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public T_AtomContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Atom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Atom(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class T_ArrayContext extends SexprContext {
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(TypeSchemeParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(TypeSchemeParser.RBRACK, 0); }
		public T_ArrayContext(SexprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterT_Array(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitT_Array(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitT_Array(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SexprContext sexpr() throws RecognitionException {
		return sexpr(0);
	}

	private SexprContext sexpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		SexprContext _localctx = new SexprContext(_ctx, _parentState);
		SexprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_sexpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				_localctx = new T_AtomContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(37);
				atom();
				}
				break;
			case 2:
				{
				_localctx = new T_QuotedContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(38);
				match(QUOTE);
				setState(39);
				sexpr(9);
				}
				break;
			case 3:
				{
				_localctx = new T_GroupedContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(40);
				match(LPAREN);
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(41);
					match(WS);
					}
					}
					setState(46);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(47);
				sexpr(0);
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(48);
					match(WS);
					}
					}
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(54);
				match(RPAREN);
				}
				break;
			case 4:
				{
				_localctx = new T_ListContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(56);
				list();
				}
				break;
			case 5:
				{
				_localctx = new T_SpreadContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57);
				match(SPREAD);
				setState(58);
				sexpr(1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(111);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						_localctx = new T_BarContext(new SexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_sexpr);
						setState(61);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(65);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WS) {
							{
							{
							setState(62);
							match(WS);
							}
							}
							setState(67);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(68);
						match(BAR);
						setState(72);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WS) {
							{
							{
							setState(69);
							match(WS);
							}
							}
							setState(74);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(75);
						sexpr(7);
						}
						break;
					case 2:
						{
						_localctx = new T_AmpContext(new SexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_sexpr);
						setState(76);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(80);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WS) {
							{
							{
							setState(77);
							match(WS);
							}
							}
							setState(82);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(83);
						match(AMP);
						setState(87);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==WS) {
							{
							{
							setState(84);
							match(WS);
							}
							}
							setState(89);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(90);
						sexpr(6);
						}
						break;
					case 3:
						{
						_localctx = new T_ArrayContext(new SexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_sexpr);
						setState(91);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(92);
						match(LBRACK);
						setState(93);
						match(RBRACK);
						}
						break;
					case 4:
						{
						_localctx = new T_IndexedContext(new SexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_sexpr);
						setState(94);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(95);
						match(LBRACK);
						{
						setState(96);
						((T_IndexedContext)_localctx).arg = sexpr(0);
						}
						setState(97);
						match(RBRACK);
						}
						break;
					case 5:
						{
						_localctx = new T_CallContext(new SexprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_sexpr);
						setState(99);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(100);
						match(LANGL);
						{
						setState(101);
						((T_CallContext)_localctx).sexpr = sexpr(0);
						((T_CallContext)_localctx).args.add(((T_CallContext)_localctx).sexpr);
						setState(106);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==COMMA) {
							{
							{
							setState(102);
							match(COMMA);
							setState(103);
							((T_CallContext)_localctx).sexpr = sexpr(0);
							((T_CallContext)_localctx).args.add(((T_CallContext)_localctx).sexpr);
							}
							}
							setState(108);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						setState(109);
						match(RANGL);
						}
						break;
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomContext extends ParserRuleContext {
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEVER:
			case NULL:
			case UNDEFINED:
			case UNKNOWN:
			case OBJECT:
			case ANY:
			case STRING:
			case NUMBER:
			case BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				primitive();
				}
				break;
			case LBRACE:
			case LBRACK:
			case BooleanLiteral:
			case StringLiteral:
			case NumberLiteral:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				literal();
				}
				break;
			case KEYOF:
			case INFER:
			case IN:
			case AS:
			case EXTENDS:
			case EXTENDS_Q:
			case IN_Q:
			case IF:
			case Identifier:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				identifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(TypeSchemeParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TypeSchemeParser.RPAREN, 0); }
		public List<TerminalNode> WS() { return getTokens(TypeSchemeParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(TypeSchemeParser.WS, i);
		}
		public List<SexprContext> sexpr() {
			return getRuleContexts(SexprContext.class);
		}
		public SexprContext sexpr(int i) {
			return getRuleContext(SexprContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TypeSchemeParserListener ) ((TypeSchemeParserListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TypeSchemeParserVisitor ) return ((TypeSchemeParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(LPAREN);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(122);
				match(WS);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(128);
				sexpr(0);
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(129);
						match(WS);
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 72636486819882L) != 0 );
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(139);
				match(WS);
				}
				}
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(145);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
